<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string-array name="planets_array">
        <item>ARCH</item>
        <item>CHEM</item>
        <item>CIVIL</item>
        <item>CSE</item>
        <item>ECE</item>
        <item>ECell</item>
        <item>EEE</item>
        <item>MECH</item>
        <item>MIN</item>
    </string-array>


    <string name="app_name">GoConso</string>
    <string name="action_settings">Settings</string>
    <string name="button_play_tap_tiles">PLAY!</string>
    <string name="button_interupt">Cancel Timer</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="tile_0">tile_0</string>
    <string name="tile_1">tile_1</string>
    <string name="tile_2">tile_2</string>
    <string name="tile_3">tile_3</string>
    <string name="tile_4">tile_4</string>
    <string name="tile_5">tile_5</string>
    <string name="tile_6">tile_6</string>
    <string name="tile_7">tile_7</string>

    <dimen name="tile_size">68dp</dimen>
    <dimen name="tap_tile_size">75dp</dimen>
    <dimen name="tile_padding">10dp</dimen>
    <dimen name="inter_tile_padding">3dp</dimen>
    <dimen name="tap_icon">60dp</dimen>

    <string name="title_activity_tap_tiles">TapTilesActivity</string>
    <string name="title_activity_splash_screen">GoConso</string>
    <string name="title_activity_tap_tile_game_over">TapTileGameOverActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_leader_board">LeaderBoardActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_updates">UpdatesActivity</string>
    <string name="title_activity_info">InfoActivity</string>
    <string name="profile">profile</string>
    <string name="scores">scores</string>
    <string name="info">info</string>
    <string name="submit">Submit</string>
    <string name="branch">Branch</string>
    <string name="enter_your_lastname">Enter Your Lastname</string>
    <string name="enter_your_firstname">Enter Your Firstname</string>
    <string name="edit_your_username">Edit Your Username</string>
    <string name="profilex">Profile</string>
    <string name="all_time">All Time</string>
    <string name="daily">Daily</string>

</resources>
