<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    android:id="@+id/frame"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.dev.pushkar.consochrome.ProfileActivity">
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f000"
    >
<ImageView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:src="@drawable/gamebackground" />
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="false">
    <TextView
        android:layout_weight="2"
        android:id="@+id/profile"
        android:textColor="#ffff"
        android:layout_margin="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profilex"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"/>

    <TextView
        android:layout_weight="0.5"
        android:layout_marginTop="30dp"
        android:textColor="#ffff"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_your_username" />
</LinearLayout>
    <com.wrapp.floatlabelededittext.FloatLabeledEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/fn1"
        android:layout_marginTop="88dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:layout_alignParentTop="true"
        >
    <EditText
        android:textColor="#ffff"
        android:textColorHint="#ffff"
        android:id="@+id/fn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_firstname"
        />
    </com.wrapp.floatlabelededittext.FloatLabeledEditText>

    <com.wrapp.floatlabelededittext.FloatLabeledEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ln1"
        android:layout_below="@id/fn1"
        android:layout_margin="20dp">

    <EditText
        android:textColor="#ffff"
        android:id="@+id/ln"
        android:textColorHint="#ffff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_lastname"
        />
    </com.wrapp.floatlabelededittext.FloatLabeledEditText>

    <com.wrapp.floatlabelededittext.FloatLabeledEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/num1"
        android:layout_below="@id/ln1"
        android:layout_margin="20dp">

        <EditText
            android:textColor="#ffff"
            android:id="@+id/number"
            android:inputType="phone"
            android:textColorHint="#ffff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Phone Number"
            />
    </com.wrapp.floatlabelededittext.FloatLabeledEditText>
    <Button
        android:textColor="#ffff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:layout_below="@id/num1"
        android:layout_centerInParent="true"
        android:layout_margin="20dp"
        android:onClick="setId"/>
</RelativeLayout>
</FrameLayout>
</android.support.design.widget.CoordinatorLayout>