<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center_horizontal"
    android:background="#000"
    android:orientation="vertical"
    android:theme="@style/Theme.AppCompat.DayNight.NoActionBar"
    android:paddingTop="10dp"
    tools:context="com.dev.pushkar.consochrome.MainActivity">

    <ImageView
        android:id="@+id/f1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/landingpageapp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="0dp"
        android:paddingTop="30dp" >

    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:id="@+id/main_relative_layout"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:padding="5dp" >

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal" >
<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
            <Button
                android:id="@+id/button_play_tap_tiles"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/button_style"
                android:onClick="playtapTiles"
                android:padding="20dp" />

                <com.romainpiel.shimmer.ShimmerTextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/button_play_tap_tiles"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:id="@+id/shimmer"
                    app:reflectionColor="#f00"
                    android:layout_gravity="center"
                    android:textColor="@android:color/primary_text_dark" />
</FrameLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/linearLayout1"
            android:layout_alignLeft="@+id/linearLayout1"
            android:orientation="horizontal"
            android:padding="0dp"
            android:paddingTop="30dp"
            android:layout_alignStart="@+id/linearLayout1">

            <Button
                android:id="@+id/button_info"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/button_style"
                android:textColor="#afff"
                android:onClick="getInfo"
                android:padding="10dp"
                android:text="@string/info" />

            <Button
                android:id="@+id/button_updates"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/button_style"
                android:textColor="#fbbb"
                android:onClick="setProfile"
                android:padding="10dp"
                android:text="@string/profile" />

            <Button
                android:id="@+id/button_leaderboard"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/button_style"
                android:textColor="#fbbb"
                android:onClick="getLeaderBoard"
                android:padding="10dp"
                android:text="@string/scores" />
        </LinearLayout>
    </RelativeLayout>

</FrameLayout>